Listen to ProjectNodeConfig change and update accordingly in AlgoExplorer

--- a/src/main/java/com/bloxbean/algodea/idea/configuration/ui/AlgoProjectConfiguration.form
+++ b/src/main/java/com/bloxbean/algodea/idea/configuration/ui/AlgoProjectConfiguration.form
@@ -70,7 +70,7 @@
                             <properties>
                               <name value="compileRadioGroup"/>
                               <selected value="false"/>
-                              <text value="Local Algorand SDK"/>
+                              <text value="Local Algorand SDK (goal)"/>
                               <toolTipText value="Algorand Node Folder"/>
                             </properties>
                           </component>
