Fix: Algorand Local SDK error on Linux

--- a/src/main/java/com/bloxbean/algodea/idea/configuration/ui/LocalSDKPanel.form
+++ b/src/main/java/com/bloxbean/algodea/idea/configuration/ui/LocalSDKPanel.form
@@ -3,10 +3,11 @@
   <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="500" height="400"/>
+      <xy x="20" y="20" width="750" height="400"/>
     </constraints>
     <properties>
-      <minimumSize width="500" height="200"/>
+      <minimumSize width="750" height="300"/>
+      <preferredSize width="750" height="300"/>
     </properties>
     <border type="none"/>
     <children>
@@ -44,7 +45,7 @@
               <forms/>
             </constraints>
             <properties>
-              <text value="Algorand Node Home"/>
+              <text value="Algorand Binary Folder"/>
             </properties>
           </component>
           <component id="36c78" class="javax.swing.JLabel">
