--- a/src/main/java/com/bloxbean/algodea/idea/stateless/ui/LogicSigSigningAccountForm.form
+++ b/src/main/java/com/bloxbean/algodea/idea/stateless/ui/LogicSigSigningAccountForm.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="5" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="514" height="400"/>
+      <xy x="20" y="20" width="518" height="400"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -76,7 +76,7 @@
               <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Account Delegation"/>
+              <text value="Delegated Signature"/>
             </properties>
           </component>
         </children>
