--- a/src/main/java/com/bloxbean/algodea/idea/transaction/ui/TransferTxnParamEntryForm.form
+++ b/src/main/java/com/bloxbean/algodea/idea/transaction/ui/TransferTxnParamEntryForm.form
@@ -3,15 +3,18 @@
   <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="900" height="363"/>
+      <xy x="20" y="20" width="900" height="4500"/>
     </constraints>
     <properties>
-      <minimumSize width="-1" height="-1"/>
+      <minimumSize width="600" height="450"/>
+      <opaque value="false"/>
       <preferredSize width="600" height="500"/>
     </properties>
     <border type="none"/>
     <children>
       <grid id="b098e" layout-manager="FormLayout">
+        <rowspec value="center:max(d;4px):noGrow"/>
+        <rowspec value="top:3dlu:noGrow"/>
         <rowspec value="center:max(d;4px):noGrow"/>
         <rowspec value="top:3dlu:noGrow"/>
         <rowspec value="center:max(d;4px):noGrow"/>
@@ -302,6 +305,33 @@
               <forms defaultalign-horz="false"/>
             </constraints>
             <properties/>
+          </component>
+          <component id="e8979" class="javax.swing.JLabel">
+            <constraints>
+              <grid row="24" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+              <forms/>
+            </constraints>
+            <properties>
+              <text value="Close Reminder To"/>
+            </properties>
+          </component>
+          <component id="67a9a" class="javax.swing.JTextField" binding="closeReminderTo">
+            <constraints>
+              <grid row="24" column="2" row-span="1" col-span="16" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                <preferred-size width="150" height="-1"/>
+              </grid>
+              <forms defaultalign-horz="false"/>
+            </constraints>
+            <properties/>
+          </component>
+          <component id="d8a45" class="javax.swing.JButton" binding="closeReminderAccountChooserBtn">
+            <constraints>
+              <grid row="24" column="20" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+              <forms/>
+            </constraints>
+            <properties>
+              <text value="..."/>
+            </properties>
           </component>
         </children>
       </grid>
