--- a/src/main/java/com/bloxbean/algodea/idea/stateless/ui/LogicSigOptInAssetDialog.form
+++ b/src/main/java/com/bloxbean/algodea/idea/stateless/ui/LogicSigOptInAssetDialog.form
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.bloxbean.algodea.idea.stateless.ui.LogicSigSendTransactionDialog">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.bloxbean.algodea.idea.stateless.ui.LogicSigOptInAssetDialog">
   <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
@@ -31,12 +31,6 @@
                 <rowspec value="center:max(d;4px):noGrow"/>
                 <rowspec value="top:3dlu:noGrow"/>
                 <rowspec value="center:d:noGrow"/>
-                <rowspec value="top:3dlu:noGrow"/>
-                <rowspec value="center:max(d;4px):noGrow"/>
-                <rowspec value="top:3dlu:noGrow"/>
-                <rowspec value="center:max(d;4px):noGrow"/>
-                <rowspec value="top:3dlu:noGrow"/>
-                <rowspec value="center:max(d;4px):noGrow"/>
                 <rowspec value="top:3dlu:noGrow"/>
                 <rowspec value="center:max(d;4px):noGrow"/>
                 <rowspec value="top:3dlu:noGrow"/>
@@ -111,42 +105,6 @@
                       <text value="..."/>
                     </properties>
                   </component>
-                  <component id="5dc14" class="javax.swing.JLabel">
-                    <constraints>
-                      <grid row="12" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-                      <forms/>
-                    </constraints>
-                    <properties>
-                      <text value="Receiver"/>
-                    </properties>
-                  </component>
-                  <component id="a8511" class="javax.swing.JTextField" binding="receiverAccountTf">
-                    <constraints>
-                      <grid row="12" column="2" row-span="1" col-span="5" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                        <preferred-size width="150" height="-1"/>
-                      </grid>
-                      <forms defaultalign-horz="false"/>
-                    </constraints>
-                    <properties/>
-                  </component>
-                  <component id="ec837" class="javax.swing.JButton" binding="receiverChooserBtn">
-                    <constraints>
-                      <grid row="12" column="8" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-                      <forms/>
-                    </constraints>
-                    <properties>
-                      <text value="..."/>
-                    </properties>
-                  </component>
-                  <component id="52915" class="javax.swing.JLabel">
-                    <constraints>
-                      <grid row="20" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-                      <forms/>
-                    </constraints>
-                    <properties>
-                      <text value="Amount"/>
-                    </properties>
-                  </component>
                   <grid id="8a6fa" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                     <margin top="0" left="0" bottom="0" right="0"/>
                     <constraints>
@@ -217,91 +175,58 @@
                     </constraints>
                     <properties/>
                   </component>
-                  <component id="de33a" class="javax.swing.JLabel">
+                  <grid id="333b0" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+                    <margin top="0" left="0" bottom="0" right="0"/>
                     <constraints>
-                      <grid row="14" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-                      <forms/>
-                    </constraints>
-                    <properties>
-                      <text value="Asset Type"/>
-                    </properties>
-                  </component>
-                  <component id="e0d17" class="javax.swing.JRadioButton" binding="algoTypeRB">
-                    <constraints>
-                      <grid row="14" column="2" row-span="1" col-span="5" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-                      <forms/>
-                    </constraints>
-                    <properties>
-                      <text value="Algo"/>
-                    </properties>
-                  </component>
-                  <component id="1353b" class="javax.swing.JRadioButton" binding="asaTypeRB">
-                    <constraints>
-                      <grid row="16" column="2" row-span="1" col-span="5" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-                      <forms/>
-                    </constraints>
-                    <properties>
-                      <text value="Algorand Standard Asset"/>
-                    </properties>
-                  </component>
-                  <component id="7c728" class="javax.swing.JComboBox" binding="assetsCB" custom-create="true">
-                    <constraints>
-                      <grid row="18" column="2" row-span="1" col-span="5" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
-                      <forms/>
-                    </constraints>
-                    <properties/>
-                  </component>
-                  <component id="93e44" class="javax.swing.JButton" binding="fetchAssetsBtn">
-                    <constraints>
-                      <grid row="18" column="8" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-                      <forms/>
-                    </constraints>
-                    <properties>
-                      <text value="Fetch Assets"/>
-                    </properties>
-                  </component>
-                  <grid id="333b0" layout-manager="FormLayout">
-                    <rowspec value="center:d:grow"/>
-                    <colspec value="fill:d:noGrow"/>
-                    <colspec value="left:4dlu:noGrow"/>
-                    <colspec value="fill:max(d;4px):noGrow"/>
-                    <constraints>
-                      <grid row="20" column="2" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                      <grid row="12" column="2" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
                       <forms defaultalign-vert="false"/>
                     </constraints>
                     <properties/>
                     <border type="none"/>
                     <children>
-                      <component id="ff892" class="javax.swing.JTextField" binding="amountTf">
+                      <component id="af5fe" class="javax.swing.JComboBox" binding="assetIdCB" custom-create="true">
                         <constraints>
-                          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="0" use-parent-layout="false">
-                            <preferred-size width="150" height="-1"/>
-                          </grid>
-                          <forms defaultalign-horz="false"/>
+                          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
                         </constraints>
-                        <properties>
-                          <minimumSize width="100" height="30"/>
-                          <preferredSize width="150" height="30"/>
-                        </properties>
+                        <properties/>
                       </component>
-                      <component id="b0a66" class="javax.swing.JLabel" binding="unitLabel">
+                      <component id="b39f2" class="javax.swing.JButton" binding="searchBtn">
                         <constraints>
-                          <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-                          <forms/>
+                          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                         </constraints>
                         <properties>
-                          <text value=""/>
+                          <text value="Search"/>
                         </properties>
                       </component>
                     </children>
                   </grid>
-                  <component id="c26ea" class="javax.swing.JButton" binding="receiverMultiSigBtn">
+                  <component id="a1314" class="javax.swing.JLabel">
                     <constraints>
-                      <grid row="12" column="10" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                      <grid row="12" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                       <forms/>
                     </constraints>
                     <properties>
-                      <text value="Multi-Sig"/>
+                      <text value="Asset Id"/>
+                    </properties>
+                  </component>
+                  <component id="30127" class="javax.swing.JLabel">
+                    <constraints>
+                      <grid row="14" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                      <forms/>
+                    </constraints>
+                    <properties>
+                      <text value="Asset Name"/>
+                    </properties>
+                  </component>
+                  <component id="3567a" class="javax.swing.JTextField" binding="assetName">
+                    <constraints>
+                      <grid row="14" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false">
+                        <preferred-size width="150" height="-1"/>
+                      </grid>
+                      <forms defaultalign-horz="false"/>
+                    </constraints>
+                    <properties>
+                      <editable value="false"/>
                     </properties>
                   </component>
                 </children>
