--- a/src/main/java/com/bloxbean/algodea/idea/stateless/ui/LogicSigSendTransactionDialog.form
+++ b/src/main/java/com/bloxbean/algodea/idea/stateless/ui/LogicSigSendTransactionDialog.form
@@ -49,6 +49,8 @@
                 <rowspec value="center:max(d;4px):noGrow"/>
                 <rowspec value="top:3dlu:noGrow"/>
                 <rowspec value="center:max(d;4px):noGrow"/>
+                <rowspec value="top:3dlu:noGrow"/>
+                <rowspec value="center:max(d;4px):noGrow"/>
                 <colspec value="fill:d:noGrow"/>
                 <colspec value="left:4dlu:noGrow"/>
                 <colspec value="fill:d:grow"/>
@@ -302,6 +304,33 @@
                     </constraints>
                     <properties>
                       <text value="Multi-Sig"/>
+                    </properties>
+                  </component>
+                  <component id="75c82" class="javax.swing.JLabel">
+                    <constraints>
+                      <grid row="22" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                      <forms/>
+                    </constraints>
+                    <properties>
+                      <text value="Close Reminder To"/>
+                    </properties>
+                  </component>
+                  <component id="c3c00" class="javax.swing.JTextField" binding="closeReminderTo">
+                    <constraints>
+                      <grid row="22" column="2" row-span="1" col-span="4" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                        <preferred-size width="150" height="-1"/>
+                      </grid>
+                      <forms defaultalign-horz="false"/>
+                    </constraints>
+                    <properties/>
+                  </component>
+                  <component id="4085e" class="javax.swing.JButton" binding="closeReminderAccountChooserBtn">
+                    <constraints>
+                      <grid row="22" column="8" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                      <forms/>
+                    </constraints>
+                    <properties>
+                      <text value="..."/>
                     </properties>
                   </component>
                 </children>
